buat file belajargithub, edit file berlajargit

--- a/pertemuan6b/belajargithub.html
+++ b/pertemuan6b/belajargithub.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar Git</title>
+    <title>Belajar Git Hub</title>
 </head>
 <body>
-
-        <h2>Belajar GIT</h2>
     
+
+    
+
 </body>
 </html>
